# live-app-icon

./: .gitignore
.github/workflows/: release.yml
app_template/: BuildConfigTemplate.xcconfig
app_template/LiveAppIcon/: AppDelegate.swift
app_template/LiveAppIcon.xcodeproj/: project.pbxproj
app_template/LiveAppIcon.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
app_template/LiveAppIcon.xcodeproj/xcshareddata/xcschemes/: LiveAppIcon.xcscheme
app_template/LiveAppIcon/Assets.xcassets/Command.dataset/: Contents.json  command.txt
app_template/LiveAppIcon/Assets.xcassets/LiveAppIcon.dataset/: Contents.json
app_template/LiveAppIcon/Base.lproj/: MainMenu.xib
cli/: Cargo.toml  Makefile.toml  README.md
cli/src/: args.rs  log.rs  main.rs
cli/src/step/: build_app.rs  fill_template_project.rs  get_template_project.rs  install_app.rs  mod.rs
cli/src/utils/: cargo.rs  fs.rs  mod.rs
