[package]
name = "laic"
version = "0.1.0"
edition = "2021"
description = "A simply CLI tool for generating animated app icons on Mac"
repository = "https://github.com/fujidaiti/live-app-icon.git"
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
chrono = "0.4.25"
clap = { version = "4.3.0", features = ["derive"] }
cmd_lib = "1.3.0"
colored = "2.0.0"
dirs = "5.0.1"
fern = "0.6.2"
fs_extra = "1.3.0"
image = "0.24.6"
log = "0.4.18"
uuid = { version = "1.3.3", features = ["v4", "fast-rng"] }
